// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialAuthProviders should match social auth provider with default icon snapshot 1`] = `
<button
  className="btn-social btn-oa2-apple-id"
  data-provider-url="/auth/login/apple-id/?auth_entry=login&next=/dashboard"
  id="oa2-apple-id"
  onClick={[Function]}
  type="button"
>
  <div
    aria-hidden="true"
    className="btn-tpa__font-container"
  >
    <span
      className="pgn__icon h-75"
    >
      <svg
        aria-hidden={true}
        fill="none"
        focusable={false}
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7 9.6 8.4l2.6 2.6H2v2h10.2l-2.6 2.6L11 17l5-5-5-5zm9 12h-8v2h10V3H12v2h8v14z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
  <span
    aria-hidden="true"
    className="notranslate pl-2"
    id="provider-name"
  >
    Apple
  </span>
  <span
    className="sr-only"
  >
    Sign in with Apple
  </span>
</button>
`;

exports[`SocialAuthProviders should match social auth provider with iconClass snapshot 1`] = `
<button
  className="btn-social btn-oa2-apple-id"
  data-provider-url="/auth/login/apple-id/?auth_entry=login&next=/dashboard"
  id="oa2-apple-id"
  onClick={[Function]}
  type="button"
>
  <div
    aria-hidden="true"
    className="btn-tpa__font-container"
  >
    <span
      className="pgn__icon h-75"
    >
      <svg
        aria-hidden={true}
        fill="none"
        focusable={false}
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 7 9.6 8.4l2.6 2.6H2v2h10.2l-2.6 2.6L11 17l5-5-5-5zm9 12h-8v2h10V3H12v2h8v14z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
  <span
    aria-hidden="true"
    className="notranslate pl-2"
    id="provider-name"
  >
    Apple
  </span>
  <span
    className="sr-only"
  >
    Sign in with Apple
  </span>
</button>
`;

exports[`SocialAuthProviders should match social auth provider with iconImage snapshot 1`] = `
[
  <button
    className="btn-social btn-oa2-apple-id"
    data-provider-url="/auth/login/apple-id/?auth_entry=login&next=/dashboard"
    id="oa2-apple-id"
    onClick={[Function]}
    type="button"
  >
    <div
      aria-hidden="true"
    >
      <img
        alt="icon Apple"
        className="btn-tpa__image-icon"
        src="https://edx.devstack.lms/logo.png"
      />
    </div>
    <span
      aria-hidden="true"
      className="notranslate pl-2"
      id="provider-name"
    >
      Apple
    </span>
    <span
      className="sr-only"
    >
      Sign in with Apple
    </span>
  </button>,
  <button
    className="btn-social btn-oa2-facebook"
    data-provider-url="/auth/login/facebook/?auth_entry=login&next=/dashboard"
    id="oa2-facebook"
    onClick={[Function]}
    type="button"
  >
    <div
      aria-hidden="true"
    >
      <img
        alt="icon Facebook"
        className="btn-tpa__image-icon"
        src="https://edx.devstack.lms/facebook-logo.png"
      />
    </div>
    <span
      aria-hidden="true"
      className="notranslate pl-2"
      id="provider-name"
    >
      Facebook
    </span>
    <span
      className="sr-only"
    >
      Sign in with Facebook
    </span>
  </button>,
]
`;
